<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
	android:layout_height="fill_parent"
	android:orientation="vertical" >
    
    <EditText
	    android:id="@+id/titleNewMission"
		android:layout_width="250dp"
		android:layout_height="wrap_content"
		android:layout_marginTop="10dp"
		android:layout_marginLeft="10dp"
		android:hint="@string/titleNewMission" />
    
    <EditText
	    android:id="@+id/descNewMission"
	    android:layout_below="@+id/titleNewMission"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:layout_marginTop="25dp"
		android:layout_marginLeft="10dp"
		android:layout_marginRight="10dp"
		android:lines="4"
		android:gravity="top"
		android:hint="@string/descNewMission" />
   
    <TextView
	    android:id="@+id/tempsMission"
	    android:layout_below="@+id/descNewMission"
	    android:layout_width="wrap_content"
    	android:layout_height="wrap_content"
    	android:layout_marginTop="25dp"
		android:layout_marginLeft="15dp"
    	android:textSize="18sp"
	    android:text="@string/tempsMission" />
    
    <DatePicker
		android:id="@+id/datePickerMission"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_below="@+id/descNewMission"
		android:layout_alignParentRight="true"
		android:calendarViewShown="false"
		android:startYear="2013"
		android:endYear="2032" />
    
    <EditText
	    android:id="@+id/nbrePoints"
	    android:layout_below="@+id/datePickerMission"
		android:layout_width="250dp"
		android:layout_height="wrap_content"
		android:layout_marginTop="25dp"
		android:layout_marginLeft="10dp"
		android:inputType="numberDecimal"
		android:hint="@string/nbrePoints" />
    
    <Button
	    android:id="@+id/assignTo"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:layout_alignParentBottom="true"
	    android:hint="@string/assignTo" />

</RelativeLayout>